--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.5.1",
+    "react-dev-utils": "^12.0.0",
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
